src/objects/apsona_msr__Apsona_Multi_step_Report__c.object
<CustomObject>
    <fields>
        <fullName>apsona_msr__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona_msr__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>apsona_msr__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apsona_msr__Report_Type__c</fullName>
        <label>Report Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Apsona Multi-step Report</label>
    <nameField>
        <label>Apsona Multi-step Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apsona Multi-step Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>